todo-kustomize/base/todo-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/part-of: todo-app
    app.openshift.io/runtime: postgresql
    app: todo-db
  name: todo-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: todo-db
        version: v1
    spec:
      containers:
      - env:
        - name: POSTGRESQL_USER
          valueFrom:
            secretKeyRef:
              key: database-user
              name: todo-db
        - name: POSTGRESQL_PASSWORD
          valueFrom:
            secretKeyRef:
              key: database-password
              name: todo-db
        - name: POSTGRESQL_DATABASE
          valueFrom:
            secretKeyRef:
              key: database-name
              name: todo-db
        #image: image-registry.openshift-image-registry.svc:5000/openshift/postgresql:latest
        image: bitnami/postgresql:14
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "1"
            memory: 1024Mi
          requests:
            cpu: "500m"
            memory: 512Mi
        # livenessProbe:
        #   exec:
        #     command:
        #     - /usr/libexec/check-container
        #     - --live
        #   failureThreshold: 3
        #   initialDelaySeconds: 120
        #   periodSeconds: 10
        #   successThreshold: 1
        #   timeoutSeconds: 10
        name: postgresql
        ports:
        - containerPort: 5432
          protocol: TCP
        # readinessProbe:
        #   exec:
        #     command:
        #     - /usr/libexec/check-container
        #   failureThreshold: 3
        #   initialDelaySeconds: 5
        #   periodSeconds: 10
        #   successThreshold: 1
        #   timeoutSeconds: 1
        #   privileged: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
          - mountPath: /var/lib/pgsql/data
            name: todo-db-data
          - mountPath: /docker-entrypoint-initdb.d
            name: todo-db-init-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      # securityContext:
      #   allowPrivilegeEscalation: false
      #   runAsNonRoot: true
      #   drop: ALL
      #   readOnlyRootFilesystem: true
      terminationGracePeriodSeconds: 30
      volumes:
        - name: todo-db-data
          persistentVolumeClaim:
            claimName: todo-db
        - name: todo-db-init-data
          # emptyDir: {}
          persistentVolumeClaim:
            claimName: todo-db-init-data
        - configMap:
            name: todo-db-init
          name: todo-db-init
---
apiVersion: v1
kind: Service
metadata:
  name: todo-db
  labels:
    app: todo-db
spec:
  ports:
  - name: tcp
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: todo-db
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
