todo-kustomize/base/todo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo
  labels:
    app: todo
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: todo
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
